[lworld] Assert in EA due to oop access to flat array

XMLWordPrintable

      Similar to JDK-8250951. TestNullableArrays fails with -XX:+StressReflectiveCode:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/.../workspace/open/src/hotspot/share/opto/escape.cpp:450), pid=26520, tid=26546
      # assert((ptnode_adr(adr->_idx) == __null || ptnode_adr(adr->_idx)->as_Field()->is_oop())) failed: sanity
      #

      Current CompileTask:
      C2: 5648 523 b compiler.valhalla.inlinetypes.TestNullableArrays::test111 (36 bytes)

      Stack: [0x00007fa3808c1000,0x00007fa3809c2000], sp=0x00007fa3809bca40, free space=1006k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xc69628] ConnectionGraph::add_objload_to_connection_graph(Node*, Unique_Node_List*)+0x3c8
      V [libjvm.so+0xc76c06] ConnectionGraph::compute_escape()+0x896
      V [libjvm.so+0xc78b65] ConnectionGraph::do_analysis(Compile*, PhaseIterGVN*)+0x1a5
      V [libjvm.so+0xae25b6] Compile::Optimize()+0xa86
      V [libjvm.so+0xae67ad] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x162d
      V [libjvm.so+0x8d7673] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6c3
      V [libjvm.so+0xaf6498] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
      V [libjvm.so+0xaf7258] CompileBroker::compiler_thread_loop()+0x668
      V [libjvm.so+0x19f64da] JavaThread::thread_main_inner()+0x25a
      V [libjvm.so+0x19fe820] Thread::call_run()+0x100
      V [libjvm.so+0x16b8ad4] thread_native_entry(Thread*)+0x104

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: