8281454: [lworld] Assert in EA due to oop access to flat array