src/hotspot/share/opto/loopopts.cpp
@@ -1012,7 +1012,7 @@ void PhaseIdealLoop::move_flat_array_check_out_of_loop(Node* n) {
     return;
   }
   Node* mem = n->in(FlatArrayCheckNode::Memory);
-  Node* array = n->in(FlatArrayCheckNode::Array)->uncast();
+  Node* array = n->in(FlatArrayCheckNode::ArrayOrKlass)->uncast();
   IdealLoopTree* check_loop = get_loop(get_ctrl(n));
   IdealLoopTree* ary_loop = get_loop(get_ctrl(array));
 
